--- a/shop.html
+++ b/shop.html
@@ -45,39 +45,15 @@
     <section class="product-section">
         <h2 class="collection-title">Our Collection</h2>
         <div class="product-container">
-            <div class="product" data-id="1" data-title="Kemeja Salur" data-jenis="atasan" data-sub="kemeja" data-brand="brand-a" data-price="Rp 199.000">
+            <div class="product" data-id="3" data-title="Kemeja Salur" data-jenis="atasan" data-sub="kemeja" data-brand="brand-a" data-price="Rp 199.000">
                 <img src="img/salur.webp" alt="Kemeja Salur">
                 <p>Kemeja Salur</p>
                 <div class="product-info">
                     <span class="product-price">Rp 199.000</span>
-                    <button class="add-to-cart" data-id="1">🛒 Add to Cart</button>
-                </div>
-            </div>
-            <div class="product" data-id="2" data-jenis="atasan" data-sub="kemeja" data-brand="brand-b" data-price="Rp 299.000">
-                <img src="img/Fitted Shirt.webp" alt="Kemeja Fitted Shirt">
-                <p>Kemeja Fitted Shirt</p>
-                <div class="product-info">
-                    <span class="product-price">Rp 299.000</span>
-                    <button class="add-to-cart" data-id="2">🛒 Add to Cart</button>
-                </div>
-            </div>
-            <div class="product" data-id="3" data-jenis="atasan" data-sub="kemeja" data-brand="brand-b" data-price="Rp 299.000">
-                <img src="img/Kemeja Korduroi.webp" alt="Kemeja Korduroi">
-                <p>Kemeja Korduroi</p>
-                <div class="product-info">
-                    <span class="product-price">Rp 299.000</span>
                     <button class="add-to-cart" data-id="3">🛒 Add to Cart</button>
                 </div>
             </div>
-            <div class="product" data-id="4" data-jenis="atasan" data-sub="kaos" data-brand="brand-b" data-price="Rp 299.000">
-                <img src="img/Fitted Shirt.webp" alt="Kemeja Fitted Shirt">
-                <p>Kemeja Fitted Shirt</p>
-                <div class="product-info">
-                    <span class="product-price">Rp 299.000</span>
-                    <button class="add-to-cart" data-id="4">🛒 Add to Cart</button>
-                </div>
-            </div>
-            <div class="product" data-id="5" data-jenis="atasan" data-sub="kaos" data-brand="brand-b" data-price="Rp 299.000">
+            <div class="product" data-id="5" data-jenis="atasan" data-sub="kemeja" data-brand="brand-b" data-price="Rp 299.000">
                 <img src="img/Fitted Shirt.webp" alt="Kemeja Fitted Shirt">
                 <p>Kemeja Fitted Shirt</p>
                 <div class="product-info">
@@ -85,31 +61,23 @@
                     <button class="add-to-cart" data-id="5">🛒 Add to Cart</button>
                 </div>
             </div>
-            <div class="product" data-id="6" data-jenis="atasan" data-sub="kaos" data-brand="brand-b" data-price="Rp 299.000">
-                <img src="img/Fitted Shirt.webp" alt="Kemeja Fitted Shirt">
-                <p>Kemeja Fitted Shirt</p>
+            <div class="product" data-id="6" data-jenis="atasan" data-sub="kemeja" data-brand="brand-b" data-price="Rp 299.000">
+                <img src="img/Kemeja Korduroi.webp" alt="Kemeja Korduroi">
+                <p>Kemeja Korduroi</p>
                 <div class="product-info">
                     <span class="product-price">Rp 299.000</span>
                     <button class="add-to-cart" data-id="6">🛒 Add to Cart</button>
                 </div>
             </div>
-            <div class="product" data-id="7" data-jenis="atasan" data-sub="kaos" data-brand="brand-b" data-price="Rp 299.000">
-                <img src="img/Fitted Shirt.webp" alt="Kemeja Fitted Shirt">
-                <p>Kemeja Fitted Shirt</p>
-                <div class="product-info">
-                    <span class="product-price">Rp 299.000</span>
-                    <button class="add-to-cart" data-id="7">🛒 Add to Cart</button>
-                </div>
-            </div>
-            <div class="product" data-id="8" data-jenis="atasan" data-sub="kaos" data-brand="brand-b" data-price="Rp 299.000">
-                <img src="img/Fitted Shirt.webp" alt="Kemeja Fitted Shirt">
-                <p>Kemeja Fitted Shirt</p>
-                <div class="product-info">
-                    <span class="product-price">Rp 299.000</span>
-                    <button class="add-to-cart" data-id="8">🛒 Add to Cart</button>
-                </div>
+            <div class="product" data-id="4" data-title="Kemeja tambal sulam" data-price="Rp 249.000" data-description="Kemeja tambal sulam cocok untuk layering dengan gaya kasual.">
+            <img src="img/Kemeja tambal sulam.webp" alt="Kemeja tambal sulam">
+            <p>Kemeja tambal sulam</p>
+            <div class="product-info">
+                <span class="product-price">Rp 249.000</span>
+                <button class="add-to-cart" data-id="4">🛒 Add to Cart</button>
             </div>
         </div>
+            </div>
     </section>
 
    
